--- a/index.html
+++ b/index.html
@@ -4,10 +4,84 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="/mechgenz-logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="MECHGENZ - Professional construction company in Qatar specializing in infrastructure, civil works, and general contracting services with 15+ years of experience." />
-    <meta name="keywords" content="construction, Qatar, infrastructure, civil works, general contractor, MECHGENZ, building, roads, fit out, trading, contracting, services" />
-    <meta name="author" content="MECHGENZ W.L.L." />
+    
+    <!-- Basic SEO Meta Tags -->
     <title>MECHGENZ - Trading Contracting and Services | Construction Company Qatar</title>
+    <meta name="description" content="MECHGENZ - Professional construction company in Qatar specializing in infrastructure, civil works, and general contracting services with 15+ years of experience." />
+    <meta name="keywords" content="MECHGENZ, Mechgenz, construction Qatar, infrastructure, civil works, general contractor, building, roads, fit out, trading, contracting, services, Qatar construction company" />
+    <meta name="author" content="MECHGENZ W.L.L." />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="geo.region" content="QA" />
+    <meta name="geo.country" content="Qatar" />
+    <meta name="geo.placename" content="Doha" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mechgenz.com/" />
+    <meta property="og:title" content="MECHGENZ - Trading Contracting and Services | Qatar" />
+    <meta property="og:description" content="Professional construction company in Qatar specializing in infrastructure, civil works, and general contracting services with 15+ years of experience." />
+    <meta property="og:image" content="https://mechgenz.com/mechgenz-og-image.jpg" />
+    <meta property="og:site_name" content="MECHGENZ" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mechgenz.com/" />
+    <meta property="twitter:title" content="MECHGENZ - Trading Contracting and Services | Qatar" />
+    <meta property="twitter:description" content="Professional construction company in Qatar specializing in infrastructure, civil works, and general contracting services." />
+    <meta property="twitter:image" content="https://mechgenz.com/mechgenz-og-image.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://mechgenz.com/" />
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#ff5722" />
+    <meta name="msapplication-TileColor" content="#ff5722" />
+    <meta name="application-name" content="MECHGENZ" />
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "MECHGENZ Trading Contracting and Services",
+      "alternateName": ["MECHGENZ", "Mechgenz"],
+      "url": "https://mechgenz.com",
+      "logo": "https://mechgenz.com/mechgenz-logo.jpg",
+      "description": "Professional construction company in Qatar specializing in infrastructure, civil works, and general contracting services with 15+ years of experience.",
+      "foundingDate": "2008",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "QA",
+        "addressRegion": "Doha",
+        "addressLocality": "Qatar"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "url": "https://mechgenz.com/contact",
+        "availableLanguage": ["English", "Arabic"]
+      },
+      "areaServed": {
+        "@type": "Country",
+        "name": "Qatar"
+      },
+      "serviceType": [
+        "Construction Services",
+        "Infrastructure Development", 
+        "Civil Works",
+        "General Contracting",
+        "Trading Services"
+      ],
+      "sameAs": [
+        "https://www.linkedin.com/company/mechgenz",
+        "https://www.facebook.com/mechgenz"
+      ]
+    }
+    </script>
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
